<resources>
    <string name="app_name">MoneyWzrd</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="ok">ok</string>
    <string name="accdelet">Account deleted</string>
    <string name="cancel">cancel</string>
    <string name="welc">Welcome back&#160;</string>
    <string name="exclamation">!</string>
    <string name="Homebtn">Home</string>
    <string name="Accbtn">Accounts</string>
    <string name="Expbtn">Expenses</string>
    <string name="Invbtn">Investments</string>
    <string name="Setbtn">Settings</string>
    <string name="moneywzrd">MoneyWzrd</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="your_one_stop_banking_app">Your one stop banking app!</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="expenses">Expenses</string>
    <string name="add">+</string>
    <string name="toolbarExp">Expenses</string>
    <string name="toolbarHom">Home</string>
    <string name="toolbarInv">Investments</string>
    <string name="toolbarSet">Settings</string>
    <string name="toolbarAcc">Accounts</string>
    <string name="accHom">Accounts at a glance</string>
    <string name="expHom">Expenses at a glance</string>
    <string name="noExp">You have no current expenses!</string>
    <string name="ExpEnt">Enter Expense, Due date, and Fee price</string>
    <string name="Duedate">Click to select due date</string>
    <string name="ExpPaid">Expense paid</string>
    <string name="noAcc">You have no accounts setup!</string>
    <string name="accnandvalue">Account name and value</string>
    <string name="mustenter">*MUST ENTER BOTH REQUIRED FIELDS*</string>
    <string name="logged">Successfully logged out!</string>
    <string name="logout">Logout</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="email_required">Email is required!</string>
    <string name="valid_email">Please provide valid email!</string>
    <string name="pass_required">Password is required!</string>
    <string name="pass_min">Password should be a minimum of 6 characters!</string>
    <string name="success_log">Successfully Logged in!</string>
    <string name="fail_log">Failed to login, Please check your credentials</string>
    <string name="pass_reset">Password reset has been sent to your email! This could take up to 5 minutes!</string>
    <string name="usr_regis">User has been registered</string>
    <string name="fail_regis">Failed to register! Try Again!</string>
    <string name="name_required">Full name is required!</string>
    <string name="ToolbareditAcc">Account editor</string>
    <string name="value">Value:</string>
    <string name="name">Name:</string>
    <string name="userPath">Users</string>
    <string name="noacc_tv">You have no accounts yet!</string>
    <string name="wentwrong">Something went wrong!</string>
    <string name="exit">Exit settings?</string>
    <string name="confirmpass">Please confirm your password!</string>
    <string name="Passnomatch">Passwords do not match, please try again!</string>
    <string name="Exitapp">Are you sure you want exit the app?</string>
    <string name="SuccessGoogle">Successful login with Google!</string>
    <string name="UnsuccessGoogle">Unsuccessful login with Google, please try again!</string>
    <string name="Linkedgoogle">Failed to login, account may be linked to Google already?</string>
    <string name="settings_activity" translatable="false">settingsact</string>
    <string name="Surelogout">Are you sure you want to logout?</string>
    <string name="Mustenterfields">MUST ENTER ALL REQUIRED FIELDS!</string>
    <string name="selectduedate">Click to select due date</string>
    <string name="totalexp">Total Expenses: $</string>
    <string name="RemExp">Remove Expense</string>
    <string name="Hasbeenpaidexp">Has this expense been paid?</string>
    <string name="morethanthree">Cannot enter more then three expenses!</string>
    <string name="expensepaid">Expense paid</string>
    <string name="Remallexp">Remove All Expenses</string>
    <string name="Deletallexp">Do you want to delete all your expenses?</string>
    <string name="allexpclear">All expenses cleared</string>
    <string name="successlog">Successful login!</string>
    <string name="first_expense">First Expense</string>
    <string name="second_expense">Second Expense</string>
    <string name="third_expense">Third Expense</string>
    <string name="clear_all">Clear All</string>





    <string name="start_watching_stocks">Start Watching Stocks</string>
    <string name="exit2">Are you sure you want to exit stocks?</string>
    <string name="warn">Warning!</string>
    <string name="suredelet">Are you sure you want to delete</string>
    <string name="questionmark">\?</string>
    <string name="Charts">Charts</string>
    <string name="History">History</string>
    <string name="NewsFeed">News Feed</string>
    <string name="fav">favorite</string>
    <string name="MyData">my_data</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="removefav">Remove from favorites?</string>
    <string name="symbol">Symbol</string>
    <string name="ascend">Ascending</string>
    <string name="price">Price</string>
    <string name="change">Change</string>
    <string name="decend">Descending</string>
    <string name="channel">channel</string>
    <string name="item">item</string>
    <string name="title">title</string>
    <string name="publishdate">pubDate</string>
    <string name="author">sa:author_name</string>
    <string name="link">link</string>
    <string name="stockMsg">Please enter a Stock name or a symbol</string>
    <string name="errorfetch">Error while fetching API</string>
    <string name="timeSeries">Time Series (Daily)</string>
    <string name="Metadata">Meta Data</string>


    <string-array name="indicators">
            <item>Price</item>
            <item>SMA</item>
            <item>EMA</item>
            <item>STOCH</item>
            <item>RSI</item>
            <item>ADX</item>
            <item>CCI</item>
            <item>BBANDS</item>
            <item>MACD</item>
        </string-array>
        <string-array name="sorting">
            <item>Symbol</item>
            <item>Price</item>
            <item>Change</item>
        </string-array>
        <string-array name="order">
            <item>Ascending</item>
            <item>Descending</item>
        </string-array>



</resources>